remove pm integration validation flag

--- a/env.example
+++ b/env.example
@@ -62,13 +62,11 @@ USE_SEMANTIC_CLASSIFICATION=true
 OPENAI_API_KEY=your_openai_api_key_here
 
 # =============================================================================
-# PM Tool Integration Configuration (Optional)
+# PM Tool Integration Configuration
 # =============================================================================
+# PM Integration is automatically enabled when PM_TOOL_TYPE is set
 
-# Enable PM Tool Integration (default: false)
-PM_INTEGRATION_ENABLED=false
-
-# Documentation URLs
+# Documentation URLs (Required for export)
 # Comma-separated list of URLs or local file paths to product documentation
 # URLs ending with /docs will be automatically crawled
 # Examples:
@@ -84,7 +82,7 @@ FEATURE_AUTO_UPDATE=false
 # PM Tool Type (linear, jira, github, custom)
 PM_TOOL_TYPE=linear
 
-# PM Tool API Key (Required if PM_INTEGRATION_ENABLED=true)
+# PM Tool API Key (Required)
 # For Linear: Personal API Key from https://linear.app/settings/api (REQUIRED for Linear)
 #   - Go to https://linear.app/settings/api
 #   - Click "Create API Key"
