fix: update naming

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Discord MCP Server Configuration
+# UNMute MCP Server Configuration
 # Copy this file to .env and fill in your values
 
 # =============================================================================
