--- a/cursor-mcp-config.json.example
+++ b/cursor-mcp-config.json.example
@@ -1,9 +1,9 @@
 {
   "mcpServers": {
-    "discord": {
-      "command": "/absolute/path/to/your/discord-mcp/run-mcp.sh",
+    "UnMute": {
+      "command": "/absolute/path/to/your/unmute-mcp/run-mcp.sh",
       "env": {
-        "DISCORD_TOKEN": "your_discord_bot_token_here",
+        "DISCORD_TOKEN_TOKEN": "your_unmute_bot_token_here",
         "GITHUB_TOKEN": "your_github_token_here_optional"
       }
     }
