--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "@prisma/client": "^7.2.0",
     "discord.js": "^14.16.3",
     "dotenv": "^17.2.3",
     "pg": "^8.11.3",
+    "prisma": "^7.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
