fix: just use primsa

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "prisma generate && tsc",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
-    "db:migrate": "tsx scripts/db-migrate.ts",
+    "db:migrate": "prisma migrate deploy",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:migrate:status": "prisma migrate status",
     "db:import": "tsx scripts/db-import-json.ts",
     "test-discord": "tsx scripts/test-discord.ts",
     "read-channel": "tsx scripts/read-channel.ts",
