--- a/env.example
+++ b/env.example
@@ -10,13 +10,42 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 
 # GitHub Configuration (Required)
-# GitHub Personal Access Token (Optional but recommended for rate limits)
+# Option 1: Personal Access Token(s) - Comma-separated for token rotation
 # Get this from https://github.com/settings/tokens
+# Multiple tokens: token1,token2,token3 (for automatic rotation)
 GITHUB_TOKEN=your_github_token_here
 
+# Option 2: OAuth App (for automatic token generation)
+# Get these from https://github.com/settings/developers (New OAuth App)
+# Then run: npm run github-oauth-setup
+# Multiple OAuth apps (comma-separated) - each has its own 5,000/hour rate limit
+# GITHUB_OAUTH_CLIENT_ID=client_id_1,client_id_2,client_id_3
+# GITHUB_OAUTH_CLIENT_SECRET=secret_1,secret_2,secret_3
+GITHUB_OAUTH_CLIENT_ID=your_oauth_client_id
+GITHUB_OAUTH_CLIENT_SECRET=your_oauth_client_secret
+
+# Option 3: GitHub App (recommended - highest rate limits)
+# See docs/GITHUB_APP_SETUP.md for setup instructions
+GITHUB_APP_ID=your_app_id
+GITHUB_APP_INSTALLATION_ID=your_installation_id
+GITHUB_APP_PRIVATE_KEY_PATH=/path/to/your-app.pem
+
 # GitHub Repository Configuration (Required)
-GITHUB_OWNER=your_org_or_username
-GITHUB_REPO=your_repository_name
+# Can be in Linear format (owner/repo) or full URL
+# Examples:
+#   - better-auth/better-auth (Linear format, preferred)
+#   - https://github.com/better-auth/better-auth
+GITHUB_REPO_URL=your_org_or_username/your_repository_name
+
+# Local Repository Path (Optional)
+# If set, code indexing will first try to read from local filesystem before falling back to GitHub API
+# This is useful when running the MCP server from within the repository (e.g., Better Auth repo)
+# Can be an absolute path or relative path (relative to where the MCP server runs)
+# Examples:
+#   - Absolute: /Users/user/Coding/betterAuth/better-auth
+#   - Relative: ../better-auth (if repo is in parent directory)
+#   - Relative: ./better-auth (if repo is in same directory)
+LOCAL_REPO_PATH=
 
 # =============================================================================
 # Optional Discord Configuration
