feat: hybrid repo and update issues with dry runs

--- a/env.example
+++ b/env.example
@@ -151,3 +151,17 @@ PM_TOOL_WORKSPACE_ID=
 
 # PM Tool Board ID (Optional)
 PM_TOOL_BOARD_ID=
+
+# =============================================================================
+# Vercel Deployment Configuration
+# =============================================================================
+
+# Cron Secret (Required for Vercel Cron)
+# Generate with: openssl rand -base64 32
+# Vercel automatically sends this as Authorization header for cron jobs
+CRON_SECRET=your_cron_secret_here
+
+# UNMute API Key (Required for HTTP API calls)
+# Generate with: openssl rand -base64 32
+# Used by Cursor and other HTTP clients to call /api/mcp/* endpoints
+UNMUTE_API_KEY=your_api_key_here
