--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "prisma generate && tsc",
     "dev": "tsx src/index.ts",
+    "dev:api": "tsx scripts/local-server.ts",
     "start": "node dist/index.js",
     "db:migrate": "prisma migrate deploy",
     "db:migrate:dev": "prisma migrate dev",
@@ -33,13 +34,15 @@
   "keywords": [
     "mcp",
     "unmute",
-    "claude"
+    "claude",
+    "vercel"
   ],
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@octokit/auth-app": "^8.0.1",
     "@prisma/client": "^6.19.1",
+    "@vercel/node": "^3.0.0",
     "discord.js": "^14.16.3",
     "dotenv": "^17.2.3",
     "prisma": "^6.19.1",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@types/node": "^22.10.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vercel": "^39.0.0"
   }
 }
