fix: resolve TypeScript build errors for Vercel deployment
- Fix Discord.js client type annotations in tool-executor.ts
- Add proper type assertions for fetch response.json() calls
- Fix GitHubSearchResult type usage
- Update ClassifiedMessage field name from matched_issues to relatedIssues
- Add type annotations for LLM API response parsing
- Fix codeFetcher.ts branch type to include commit.sha
- Comment out deprecated db-import-json.ts script (needs Prisma migration)
- Fix tree traversal type annotations

--- a/env.example
+++ b/env.example
@@ -79,7 +79,18 @@ ISSUES_CACHE_FILE=github-issues-cache.json
 # Database URL (Optional)
 # If set, uses PostgreSQL database for storage
 # If not set, uses JSON files for storage (try-it-out mode)
-# Example: postgresql://user:password@localhost:5432/unmute_mcp
+#
+# LOCAL DEVELOPMENT (macOS):
+# DATABASE_URL=postgresql://$(whoami)@localhost:5432/unmute
+# Or with hardcoded username:
+# DATABASE_URL=postgresql://your_username@localhost:5432/unmute
+#
+# VERCEL PRODUCTION (set in Vercel Dashboard → Environment Variables):
+# DATABASE_URL=postgres://...@...vercel-storage.com/...
+#
+# OTHER OPTIONS:
+# - Neon: postgresql://user:pass@ep-xxx.region.neon.tech/dbname?sslmode=require
+# - Supabase: postgresql://postgres:pass@db.xxx.supabase.co:5432/postgres
 DATABASE_URL=
 
 # Default fetch limits when database is not configured (try-it-out mode)
