--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,8 @@
       "maxDuration": 60
     }
   },
-  "env": {
-    "PRISMA_GENERATE_DATAPROXY": "true"
-  },
   "build": {
-    "env": {
-      "PRISMA_GENERATE_DATAPROXY": "true"
-    }
+    "env": {}
   }
 }
 
