feat: update asignee

--- a/env.example
+++ b/env.example
@@ -164,6 +164,43 @@ PM_TOOL_WORKSPACE_ID=
 PM_TOOL_BOARD_ID=
 
 # =============================================================================
+# PR-based Sync Configuration (Optional)
+# =============================================================================
+
+# Organization Members CSV File (Recommended for PR-based sync)
+# Path to CSV file exported from your organization with team members
+# The CSV should have columns: Name, Email, Role, Teams, Active, GitHub Username
+# If GitHub Username column exists, mappings will be auto-built by matching emails to Linear users
+# Default: members.csv in project root
+# Place members.csv in project root (it's in .gitignore for privacy)
+# MEMBERS_CSV_PATH=members.csv
+
+# Organization Engineers List (Alternative to CSV - not needed if using CSV with GitHub column)
+# List of organization engineer GitHub usernames
+# Only PRs from these engineers will trigger Linear issue assignment
+# Format: JSON array: ["username1", "username2"] or comma-separated: "username1,username2"
+# Example: ["engineer1", "engineer2"] or "engineer1,engineer2"
+# ORGANIZATION_ENGINEERS=["engineer1","engineer2"]
+
+# User Mappings (Optional - auto-built from CSV if available)
+# Maps organization engineer GitHub usernames to Linear user IDs
+# Used by PR-based sync to automatically assign Linear issues when PRs are opened by organization engineers
+# Format: JSON array of { "githubUsername": "github_username", "linearUserId": "linear-user-id" }
+# Example: [{"githubUsername": "engineer1", "linearUserId": "linear-user-id-123"}]
+# Note: If MEMBERS_CSV_PATH is set and CSV has GitHub Username column, mappings are auto-built automatically
+# To find Linear user IDs manually, use the listUsers() method in LinearIntegration or query Linear API
+# USER_MAPPINGS=[{"githubUsername":"engineer1","linearUserId":"linear-user-id"}]
+
+# Default Assignee ID for PR-based Sync (Optional)
+# If no user mapping is found for a PR author (but they are an organization engineer), assign to this user
+# DEFAULT_ASSIGNEE_ID=linear-user-id-123
+
+# Default Linear User ID for PR-based Sync (Optional)
+# If no user mapping is found for a PR author, this user will be assigned instead
+# Only used if USER_MAPPINGS is also configured
+# DEFAULT_ASSIGNEE_ID=linear-user-id-123
+
+# =============================================================================
 # Vercel Deployment Configuration
 # =============================================================================
 
