--- a/env.example
+++ b/env.example
@@ -27,18 +27,18 @@ GITHUB_APP_PRIVATE_KEY_PATH=/path/to/your-app.pem
 # GitHub Repository Configuration (Required)
 # Can be in Linear format (owner/repo) or full URL
 # Examples:
-#   - better-auth/better-auth (Linear format, preferred)
-#   - https://github.com/better-auth/better-auth
+#   - acme-corp/my-project (Linear format, preferred)
+#   - https://github.com/acme-corp/my-project
 GITHUB_REPO_URL=your_org_or_username/your_repository_name
 
 # Local Repository Path (Optional)
 # If set, code indexing will first try to read from local filesystem before falling back to GitHub API
-# This is useful when running the MCP server from within the repository (e.g., Better Auth repo)
+# This is useful when running the MCP server from within the repository
 # Can be an absolute path or relative path (relative to where the MCP server runs)
 # Examples:
-#   - Absolute: /Users/user/Coding/betterAuth/better-auth
-#   - Relative: ../better-auth (if repo is in parent directory)
-#   - Relative: ./better-auth (if repo is in same directory)
+#   - Absolute: /Users/user/Projects/my-project
+#   - Relative: ../my-project (if repo is in parent directory)
+#   - Relative: ./my-project (if repo is in same directory)
 LOCAL_REPO_PATH=
 
 # =============================================================================
